--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   </head>
   <body>
-  !!!
+  		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    </div>
+    <footer>
+      <ul>
+        <li><a href="mailto:patrick-m-kendall@gmail.com">email</a></li>        
+      </ul>
+    </footer>
   </body>
 </html>
